--- a/estilos.css
+++ b/estilos.css
@@ -353,12 +353,12 @@ header{
     display: grid;
     grid-template-columns: repeat(6, 1fr); /* 6 columnas */
     grid-template-rows: repeat(3, auto); /* 3 filas */
-    gap: 5px; /* Espacio entre los elementos */
+    gap: 0px; /* Espacio entre los elementos */
 }
 
 .skill-logo img {
     width: 100%;
-    height: 60px; /* Altura fija para uniformidad */
+    height: 50px; /* Altura fija para uniformidad */
     object-fit: contain; /* Ajuste proporcional */
     display: flex;
 }
@@ -593,8 +593,12 @@ header{
     .skills-grid-container{
         grid-template-columns: repeat(3, 1fr); /* 6 columnas */
         grid-template-rows: repeat(6, auto);
-    }
 
+
+    }
+    .skill-logo h3{
+        font-size: smaller;
+    }
     .contactos-container{
         flex-direction: column;
     }
