--- a/2Danimation/estilos.css
+++ b/2Danimation/estilos.css
@@ -165,10 +165,14 @@ body{
     grid-row: span 1;
 }
 .galeria-animations :nth-child(2){
-    grid-column: span 1;
+    grid-column:span 3;
     grid-row: span 1;
 }
 .galeria-animations :nth-child(3){
+    grid-column: span 2;
+    grid-row: span 1;
+}
+.galeria-animations :nth-child(4){
     grid-column: span 3;
     grid-row: span 1;
 }
